# FastDeployTestForRKNPU2

./: CMakeLists.txt  README.md  basewidget.cpp  basewidget.h  basewidget.ui  config.cpp  config.h  currentvideo.cpp  currentvideo.h  detection.cpp  detection.h  detection.ui  facedetection.cpp  facedetection.h  facedetection.ui  ocr.cpp  ocr.h  ocr.ui  segmentation.cpp  segmentation.h  segmentation.ui  widget.cpp  widget.h  widget.ui
model/: README.md
